src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

html {
  scroll-behavior: smooth;
}

body {
  color: #fff;
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  font-family: 'Gotham';
  scroll-behavior: smooth;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover; /* Ensure the video covers the entire background */
  z-index: -1; /* Place the video behind other content */
}

/* Optional: Overlay to enhance visibility of content */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
  z-index: 0; /* Ensure the overlay stays behind the video */
}

/* Optional: Content styling */
.content {
  position: top; /* Position content relative to the viewport */
  z-index: 3; /* Ensure the content stays above the video */
  color: white;
  text-align: center;
  padding: 20px;
  height: 16vh;
  /* background: linear-gradient(180deg,#0667b0,rgba(6,103,176,.521) 66.67%,rgba(6,103,176,0)); */
  align-items: center;
  width: 100%;
}

.bg-main {
  background-image: url('../resources/img/bg-main.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 70%;
  position: relative;

}

.bg-what-is {
  background-image: url('../resources/img/bg-what-is.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 30%;
  position: relative;
}

.bg-main::after,
.bg-what-is::after,
.bg-what-includes-0::after,
.bg-what-includes-1::after,
/* .bg-visit::after, */
.bg-what-is::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(90, 73, 73, 0.5); /* White color with 20% opacity */
  z-index: 1; /* Ensure the white layer is above the background image */
}
.bg-main>*,
.bg-what-includes>*,
.bg-what-includes-0>*,
.bg-what-includes-1>*,
.bg-visit>*,
.bg-what-is>* {
  position: relative;
  z-index: 2; /* Ensure the white layer is above the background image */
}

.bg-what-includes-0 {
  background-image: url('../resources/img/bg-what-includes.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 30%;
  position: relative;
}

.bg-what-includes-1 {
  background-image: url('../resources/img/vr-tour.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 30%;
  position: relative;
}


.bg-visit {
  background: rgb(146,142,141);
  /* background: -moz-radial-gradient(circle at bottom, rgba(214,73,40,0.5) 0%, rgba(35,31,32,1) 50%, rgba(35,31,32,1) 100%);
  background: -webkit-radial-gradient(circle at bottom, rgba(214,73,40,0.5) 0%, rgba(35,31,32,1) 50%, rgba(35,31,32,1) 100%);
  background: radial-gradient(circle at bottom, rgba(214,73,40,0.5) 0%, rgba(35,31,32,1) 50%, rgba(35,31,32,1) 100%); */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#231f20",endColorstr="#d64928",GradientType=1);


  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 30%;
  position: relative;
}

.bg-practical-info {
  background: rgb(35,31,32);
  background: -moz-linear-gradient(270deg, rgba(35,31,32,1) 0%, rgba(214,73,40,0.4962359943977591) 50%, rgba(35,31,32,1) 100%);
  background: -webkit-linear-gradient(270deg, rgba(35,31,32,1) 0%, rgba(214,73,40,0.4962359943977591) 50%, rgba(35,31,32,1) 100%);
  background: linear-gradient(270deg, rgba(35,31,32,1) 15%, rgba(214,73,40,0.5) 50%, rgba(35,31,32,1) 85%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#231f20",endColorstr="#231f20",GradientType=1);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 30%;
}

.bg-tickets {
  background: rgb(214,73,40);
  background: -moz-linear-gradient(90deg, rgba(214,73,40,1) 0%, rgba(35,31,32,1) 45%, rgba(35,31,32,1) 55%, rgba(214,73,40,1) 100%);
  background: -webkit-linear-gradient(90deg, rgba(214,73,40,1) 0%, rgba(35,31,32,1) 45%, rgba(35,31,32,1) 55%, rgba(214,73,40,1) 100%);
  background: linear-gradient(90deg, rgba(35,31,32,1) 0%, rgba(214,73,40,1) 50%, rgba(35,31,32,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d64928",endColorstr="#d64928",GradientType=1);
}

/* .text-shadow {
  text-shadow: 0px 2px 5px black;
}

.text-shadow-sm {
  text-shadow: 0px 1px 3px black;
} */

.rounded-circle {
  min-width: 45px;
  max-width: 45px !important;
  border-radius: 100%;
}

@media screen and (max-width:720px) {
  .rounded-circle {
    min-width: 25px;
    max-width: 25px;
    max-height: 25px;
    min-height: 25px;
    border-radius: 100%;
  }

  .bg-main,
  .bg-what-is,
  .bg-what-includes-0,
  .bg-what-includes-1,
  /* .bg-visit::after, */
  .bg-what-is {
    background-position: center;
}
}

